[gd_scene load_steps=3 format=3 uid="uid://beohxmqhnpjfg"]

[ext_resource type="Script" path="res://Scripts/CadastroItem.gd" id="1_flhr8"]
[ext_resource type="Texture2D" uid="uid://yd6lj62ywjel" path="res://icon.svg" id="2_uexps"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_flhr8")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png", "*.jpg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -451.0
offset_top = 95.0
offset_right = 455.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Nome do item"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Quantidade do item"

[node name="LineEdit2" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Abrir imagem:"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_uexps")
stretch_mode = 5

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Selecionar imagem"

[node name="Label4" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Enviar produto"

[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
